Fix visibility in firefox

--- a/src/app/routes/cards/visibility/visibility.component.scss
+++ b/src/app/routes/cards/visibility/visibility.component.scss
@@ -18,10 +18,11 @@
     max-width: 400px;
     margin: 30px 0;
     position: relative;
+    display: flex;
+    align-items: center;
 
     .right-arrow, .left-arrow {
       position: absolute;
-      bottom: -2px;
       color: white;
     }
   }
@@ -36,6 +37,10 @@
       outline: none;
     }
 
+    &::-moz-focus-outer {
+      border: 0;
+    }
+
     // CIRCLE THUMB
 
     &::-webkit-slider-thumb {
@@ -46,37 +51,20 @@
       border-radius: 50%;
       background: #ffffff;
       cursor: pointer;
-      margin-top: -10px; 
+      margin-top: -10px;
       box-shadow: 0 0 15px 5px white;
     }
 
     &::-moz-range-thumb {
+      -moz-appearance: none;
       border: 1px solid white;
       height: 25px;
       width: 25px;
       border-radius: 50%;
       background: #ffffff;
       cursor: pointer;
+      margin-top: -10px; 
       box-shadow: 0 0 15px 5px white;
-    }
-
-    &::-ms-thumb {
-      border: 1px solid white;
-      height: 25px;
-      width: 25px;
-      border-radius: 50%;
-      background: #ffffff;
-      cursor: pointer;
-      box-shadow: 0 0 15px 5px white;
-    }
-
-    &::-ms-track {
-      width: 100%;
-      cursor: pointer;
-    
-      background: transparent; 
-      border-color: transparent;
-      color: transparent;
     }
 
     // TRACK LINE
@@ -87,46 +75,17 @@
       cursor: pointer;
       box-shadow: 0 0 5px .5px white;
       background-image: linear-gradient(to right, rgb(94, 94, 94), white);
-      border-radius: 1.25px;
+      border-radius: 1.5px;
       border: 0.1px solid #010101;
     }
 
     &::-moz-range-track {
       width: 100%;
-      height: 8.4px;
+      height: 5px;
       cursor: pointer;
-      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-      background-image: linear-gradient(to right, black, white);
-      border-radius: 1.25px;
-      border: 0.1px solid #010101;
-    }
-    
-    &::-ms-track {
-      width: 100%;
-      height: 8.4px;
-      cursor: pointer;
-      background: transparent;
-      border-color: transparent;
-      border-width: 16px 0;
-      color: transparent;
-    }
-    &::-ms-fill-lower {
-      background-image: linear-gradient(to right, black, white);
-      border: 0.1px solid #010101;
-      border-radius: 2.5px;
-      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    }
-    &:focus::-ms-fill-lower {
-      background-image: linear-gradient(to right, black, white);
-    }
-    &::-ms-fill-upper {
-      background-image: linear-gradient(to right, black, white);
-      border: 0.1px solid #010101;
-      border-radius: 2.5px;
-      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    }
-    &:focus::-ms-fill-upper {
-      background-image: linear-gradient(to right, black, white);
+      box-shadow: 0 0 5px .5px white;
+      background-image: linear-gradient(to right, rgb(94, 94, 94), white);
+      border-radius: 1.5px;
     }
   }
 
